fix alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1798,7 +1798,7 @@ car-input-container select:focus {
 .categories-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
+  gap: 8px;
   width: 100%;
 }
 
